--- a/deno.json
+++ b/deno.json
@@ -1,9 +1,9 @@
 {
   "tasks": {
-    "build": "deno run -A ./.build/build.ts",
-    "build:watch": "deno run -A ./.build/build.ts --watch",
-    "build:dev": "deno run -A ./.build/build.ts --develope",
-    "build:dev:watch": "deno run -A ./.build/build.ts --develope --watch",
+    "build": "deno run -A ./config/build.ts",
+    "build:watch": "deno run -A ./config/build.ts --watch",
+    "build:dev": "deno run -A ./config/build.ts --develope",
+    "build:dev:watch": "deno run -A ./config/build.ts --develope --watch",
     "lint": "deno lint",
     "test": "deno test -A --check --reload --doc --allow-none --junit-path=\"./report.xml\""
   },
